fix: gap

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -274,8 +274,11 @@
         flex-basis: 100%
     &-bottom
       margin-top: 63px
-      flex-direction: column
-      align-items: flex-start
+      position: relative
+      &__img
+        position: absolute
+        top: 23px
+        left: -4px
       &-text
         width: 100%
         margin-bottom: 10px
