--- a/sass/_setting.sass
+++ b/sass/_setting.sass
@@ -48,3 +48,5 @@ button
   color: $primary
 .onvalid
   color: $primary
+.fovalid
+  color: $primary
