--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -184,3 +184,7 @@
   background-color: #000
   border-radius: 10px
   overflow: hidden
+  &__yandex
+    width: 100%
+    height: 213px
+    frameborder: 0
