--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -32,6 +32,13 @@
       font-size: 36px
       line-height: 45px
       text-transform: uppercase
+label
+  &.onvalid
+    position: absolute
+    bottom: 0
+    left: 30px
+    font-size: 13px
+
 .subcribe
   position: relative
   border-radius: 4px
